remove '<...>views' models and site components updated

--- a/src/app/sites/mapa/mapa.component.html
+++ b/src/app/sites/mapa/mapa.component.html
@@ -1,1 +1,5 @@
-<google-map></google-map>
+<div id="map" style="height: 500px; width: 100%;"></div>
+<!-- Overlay para mostrar la etiqueta -->
+<div #popup id="popup" class="ol-popup">
+    <div #popupContent id="popup-content"></div>
+</div>
