--- a/src/app/sites/my-profile/my-profile.component.css
+++ b/src/app/sites/my-profile/my-profile.component.css
@@ -1,27 +1,27 @@
 /* my-profile.component.css */
-.container {
-    margin-top: 20px;
-}
-
-h2 {
-    font-size: 28px;
-    font-weight: bold;
-}
-
 .card {
-    margin-top: 20px;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .card-header {
-    font-size: 20px;
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+.card-body {
+    padding: 2rem;
+}
+
+.row {
+    margin-bottom: 1rem;
+}
+
+.col-md-4 {
     font-weight: bold;
 }
 
-.card-body p {
-    font-size: 16px;
-    margin-bottom: 10px;
-}
-
 .alert {
-    margin-top: 20px;
+    margin-top: 2rem;
 }
