--- a/src/app/sites/vigilance/vigilance.component.html
+++ b/src/app/sites/vigilance/vigilance.component.html
@@ -1,64 +1,49 @@
 <div class="container mt-4">
-    <h2 class="mb-4 text-center">Gestión de Tests</h2>
-
-    <!-- Sección de Filtrado -->
-    <div class="row mb-4">
-        <div class="col-md-4">
-            <input type="text" class="form-control" placeholder="Buscar por ID de Test" [(ngModel)]="filterTestId">
-        </div>
-        <div class="col-md-4">
-            <input type="text" class="form-control" placeholder="Buscar por ID de Paciente"
-                [(ngModel)]="filterPacienteId">
-        </div>
-        <div class="col-md-4">
-            <select class="form-select" [(ngModel)]="filterConsignado">
-                <option value="">Todos los Estados</option>
-                <option value="true">Consignado</option>
-                <option value="false">Por Consignar</option>
-            </select>
-        </div>
-    </div>
+    <h2 class="mb-4 text-center">GESTIÓN DE TESTS REALIZADOS</h2>
 
     <div *ngIf="!selectedTest; else testDetail">
         <div *ngIf="filteredTests.length > 0; else NoTest" class="table-responsive">
-            <table class="table table-striped table-hover">
-                <thead class="table-dark">
+            <table class="table table-striped table-hover align-middle">
+                <thead class="table-dark text-center">
                     <tr>
-                        <th>ID Test</th>
-                        <th>Tipo Test</th>
-                        <th>Paciente</th>
-                        <th>Resultado</th>
-                        <th>Interpretación</th>
-                        <th>Fecha</th>
-                        <th>Estado</th>
-                        <th>Acciones</th>
+                        <th>ID TEST</th>
+                        <th>TIPO TEST</th>
+                        <th>PACIENTE</th>
+                        <th>RESULTADO</th>
+                        <th>INTERPRETACIÓN</th>
+                        <th>FECHA</th>
+                        <th>ESTADO</th>
+                        <th>ACCIONES</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let test of filteredTests">
-                        <td>{{test?.id_test}}</td>
-                        <td>{{test?.tipo_test?.nombre}}</td>
-                        <td>{{test?.paciente?.usuario?.persona?.nombre}} {{test?.paciente?.usuario?.persona?.apellido_paterno}} {{test.paciente.usuario.persona.apellido_materno}}</td>
-                        <td>{{test?.resultado}}</td>
+                        <td>{{ test?.id_test }}</td>
+                        <td>{{ test?.tipo_test?.nombre }}</td>
                         <td>
-                            <div class="interpretacion">
-                                <p class="mb-1 text-muted">{{ test.interpretacion }}</p>
-                                <div class="color" [style.background-color]="test.color"></div>
+                            {{ test?.paciente?.usuario?.persona?.nombre }} 
+                            {{ test?.paciente?.usuario?.persona?.apellido_paterno }} 
+                            {{ test?.paciente?.usuario?.persona?.apellido_materno }}
+                        </td>
+                        <td>{{ test?.resultado }}</td>
+                        <td>
+                            <div class="d-flex align-items-center">
+                                <span class="badge rounded-pill me-2" [style.background-color]="test.color"></span>
+                                <span class="text-muted">{{ test.interpretacion }}</span>
                             </div>
                         </td>
-                        <td>{{test?.fecha | date: 'dd/MM/yyyy - hh:mm:ss' }}</td>
+                        <td>{{ test?.fecha | date: 'dd/MM/yyyy - HH:mm:ss' }}</td>
                         <td>
-                            <span class="badge"
-                                [ngClass]="{'bg-success': test.consignado, 'bg-warning': !test.consignado}">
+                            <span class="badge" [ngClass]="{'bg-success': test.consignado, 'bg-warning': !test.consignado}">
                                 {{ test.consignado ? 'CONSIGNADA' : 'POR CONSIGNAR' }}
                             </span>
                         </td>
-                        <td>
+                        <td class="actions">
                             <button class="btn btn-info btn-sm me-2" (click)="viewTestDetails(test)">
-                                Ver Detalle
+                                VER DETALLE
                             </button>
                             <button *ngIf="!test.consignado;" class="btn btn-primary btn-sm" (click)="getTest(test)">
-                                Consignar
+                                CONSIGNAR
                             </button>
                         </td>
                     </tr>
@@ -73,28 +58,32 @@
                 <h5 class="mb-0">TEST SELECCIONADO - {{ tipoTest.nombre }}</h5>
             </div>
             <div class="card-body">
-                <p><strong>ID Test:</strong> {{ test?.id_test }}</p>
-                <p><strong>Tipo Test:</strong> {{ test?.tipo_test?.nombre }}</p>
-                <p><strong>Paciente:</strong> {{ test?.paciente?.usuario?.persona?.nombre }}</p>
-                <p><strong>Resultado:</strong> {{ test?.resultado }} pts.</p>
-                <p><strong>Interpretación:</strong> {{ test?.interpretacion }}</p>
-                <p><strong>Fecha:</strong> {{ test?.fecha | date: 'dd/MM/yyyy - hh:mm:ss' }}</p>
-                <p><strong>Estado:</strong> {{ test?.consignado ? 'CONSIGNADA' : 'POR CONSIGNAR' }}</p>
-                <p><strong>Ansiedad Consignada:</strong> {{ test?.ansiedad_consignada }}</p>
-                <p><strong>Observaciones:</strong> {{ test?.observaciones }}</p>
+                <p><strong>ID TEST:</strong> {{ test?.id_test }}</p>
+                <p><strong>TIPO TEST:</strong> {{ test?.tipo_test?.nombre }}</p>
+                <p><strong>PACIENTE:</strong> {{ test?.paciente?.usuario?.persona?.nombre }} 
+                    {{ test?.paciente?.usuario?.persona?.apellido_paterno }} 
+                    {{ test?.paciente?.usuario?.persona?.apellido_materno }}</p>
+                <p><strong>RESULTADO:</strong> {{ test?.resultado }} pts.</p>
+                <p><strong>INTERPRETACION:</strong> {{ test?.interpretacion }}</p>
+                <p><strong>FECHA:</strong> {{ test?.fecha | date: 'dd/MM/yyyy - HH:mm:ss' }}</p>
+                <p><strong>ESTADO:</strong> {{ test?.consignado ? 'CONSIGNADA' : 'POR CONSIGNAR' }}</p>
+                <p><strong>ANSIEDAD:</strong> {{ test?.ansiedad_consignada }}</p>
+                <p><strong>OBSERVACIONES:</strong> {{ test?.observaciones }}</p>
+
                 <h5 class="card-title">Resumen:</h5>
-                    <ul class="list-group" *ngIf="preguntasContestadas.length > 0; else Cargando">
-                        <li class="list-group-item" *ngFor="let preguntaContestada of preguntasContestadas">
-                            <p><strong>Pregunta:</strong> {{ preguntaContestada.pregunta }}</p>
-                            <p><strong>Respuesta:</strong> {{ preguntaContestada.alternativa }}</p>
-                        </li>
-                    </ul>
-                    <ng-template #Cargando>
-                        <div class="alert alert-warning text-center" role="alert">
-                            CARGANDO RESPUESTAS...
-                        </div>
-                    </ng-template>
-                <div *ngIf="esOpcionConsignar">
+                <ul class="list-group" *ngIf="preguntasContestadas.length == 10; else Cargando">
+                    <li class="list-group-item" *ngFor="let preguntaContestada of preguntasContestadas">
+                        <p><strong>Pregunta:</strong> {{ preguntaContestada.pregunta }}</p>
+                        <p><strong>Respuesta:</strong> {{ preguntaContestada.alternativa }}</p>
+                    </li>
+                </ul>
+                <ng-template #Cargando>
+                    <div class="alert alert-warning text-center" role="alert">
+                        CARGANDO RESPUESTAS...
+                    </div>
+                </ng-template>
+
+                <div *ngIf="esOpcionConsignar" class="mt-4">
                     <form (ngSubmit)="submitConsignation()">
                         <div class="mb-3">
                             <label for="ansiedadConSignada" class="form-label">Ansiedad Consignada</label>
@@ -106,10 +95,8 @@
                             <textarea class="form-control" id="observaciones" [(ngModel)]="observaciones"
                                 name="observaciones" rows="3" required></textarea>
                         </div>
-                        <!-- consignado siempre será true -->
                         <button type="submit" class="btn btn-success">ENVIAR CONSIGNACIÓN</button>
-                        <button type="button" class="btn btn-secondary" (click)="cancel()">CANCELAR
-                            CONSIGNACIÓN</button>
+                        <button type="button" class="btn btn-secondary" (click)="cancel()">CANCELAR CONSIGNACIÓN</button>
                     </form>
                 </div>
             </div>
