--- a/src/app/sites/tests-performed/tests-performed.component.html
+++ b/src/app/sites/tests-performed/tests-performed.component.html
@@ -13,14 +13,14 @@
                         <div class="interpretacion">
                             <div>
                                 <p><strong>Fecha realizada: </strong> {{ test?.fecha | date: 'dd/MM/yyyy - hh:mm:ss' }}</p>
-                                <p class="mb-1 text-muted"><strong>Interpretacion: </strong>{{ test?.interpretacion }}</p>
+                                <p class="mb-1 text-muted"><strong>Interpretacion: </strong>{{ test?.clasificacion?.interpretacion }}</p>
                                 <p><strong>Estado: </strong>
-                                <span class="badge" [ngClass]="{'bg-success': test.consignado, 'bg-warning': !test.consignado}">
-                                {{ test?.consignado ? 'CONSIGNADA' : 'POR CONSIGNAR' }}
+                                <span class="badge" [ngClass]="{'bg-success': test.id_vigilancia, 'bg-warning': !test.id_vigilancia}">
+                                {{ test?.id_vigilancia ? 'CONSIGNADA' : 'POR CONSIGNAR' }}
                             </span>
                                 </p>
                             </div>
-                            <p class="color" [style.background-color]="test.color"></p>
+                            <p class="color" [style.background-color]="test.clasificacion.semaforo.color"></p>
                         </div>
                     </a>
                 </li>
@@ -63,15 +63,15 @@
                     TEST SELECCIONADO - {{ tipoTest.nombre }}
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Interpretacion: {{ test?.interpretacion }}</h5>
+                    <h5 class="card-title">Interpretacion: {{ test?.clasificacion?.interpretacion }}</h5>
                     <h5 class="card-title">Análisis del especialista:</h5>
-                    <p><strong>Consignacion: </strong>{{ test?.ansiedad_consignada }}</p>
-                    <p><strong>Observación: </strong>{{ test?.observaciones }}</p>
+                    <p><strong>Ansiedad certificada: </strong>{{ test?.vigilancia?.ansiedad?.contenido || 'No hay certificacion disponible' }}</p>
+                    <p><strong>Tratamiendo: </strong>{{ test?.vigilancia?.tratamiento?.recomendacion || 'No hay tratamiento disponible'}}</p>
                     <h5 class="card-title">Resumen:</h5>
-                    <ul class="list-group" *ngIf="preguntasContestadas.length == 10; else Cargando">
-                        <li class="list-group-item" *ngFor="let preguntaContestada of preguntasContestadas">
-                            <p><strong>Pregunta:</strong> {{ preguntaContestada.pregunta }}</p>
-                            <p><strong>Respuesta:</strong> {{ preguntaContestada.alternativa }}</p>
+                    <ul class="list-group" *ngIf="respuestas.length > 0; else Cargando">
+                        <li class="list-group-item" *ngFor="let respuesta of respuestas">
+                            <p><strong>Pregunta:</strong> {{ respuesta.pregunta.contenido }}</p>
+                            <p><strong>Respuesta:</strong> {{ respuesta.alternativa.contenido }}</p>
                         </li>
                     </ul>
                     <ng-template #Cargando>
